# experiment-launcher

./: .gitignore  README.md  example_script.py  pyproject.toml
example/: config.yaml
src/experiment_launcher/: __init__.py  configuration_sweeper.py  launch.py  local_launcher.py  parse_decorator.py  slurm_launcher.py
